@@ -193,13 +193,14 @@ int ap_mpm_run(apr_pool_t *_pconf, apr_pool_t *plog, server_rec *s )
         /* Parent process */
         char restart;
         is_parent_process = TRUE;
-        ap_log_pid(pconf, ap_pid_fname);
 
         if (ap_setup_listeners(ap_server_conf) < 1) {
             ap_log_error(APLOG_MARK, APLOG_NOERRNO|APLOG_ALERT, 0, s,
                          "no listening sockets available, shutting down");
             return 1;
         }
+
+        ap_log_pid(pconf, ap_pid_fname);
 
         restart = master_main();
         ++ap_my_generation;
